<resources>
    <string name="app_name">CoffeeMemos</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_favorite">Favorite</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_timer">Timer</string>

    <!-- 後で消す    -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ヘッダー関連  -->
    <string name="home_recipe">Recipes</string>
    <string name="home_bean">Beans</string>
    <string name="recipe_detail">Recipe Detail</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="edit_bean">Edit Bean</string>
    <string name="edit_roast">Edit Roast</string>
    <string name="edit_grind">Edit Grind</string>
    <string name="edit_taste">Edit Taste</string>
    <string name="edit_process">Edit Process</string>
    <string name="bean_detail">Bean Detail</string>
    <string name="new_recipe">New Recipe</string>
    <string name="new_bean">New Bean</string>
    <string name="search">Search</string>
    <string name="timer">Timer</string>
    <string name="select_bean">Select Bean</string>


    <!-- レシピ関連  -->
    <string name="tool">抽出器具</string>
    <string name="extraction_time_title">抽出時間</string>
    <string name="extraction_time_seconds">抽出時間(秒)</string>
    <string name="extraction_time_minutes">抽出時間(分)</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>
    <string name="pre_infusion_time">蒸らし時間(秒)</string>
    <string name="grind_size">豆の粒度</string>
    <string name="amount_beans">コーヒーの粉量(g)</string>
    <string name="amount_extraction">抽出量(cc)</string>
    <string name="comment">コメント</string>
    <string name="temperature">湯温(℃)</string>
    <string name="roast">焙煎度</string>
    <string name="created_date">作成日</string>

    <!-- テイスト  -->
    <string name="sour">酸味</string>
    <string name="bitter">苦味</string>
    <string name="sweet">甘味</string>
    <string name="rich">コク</string>
    <string name="flavor">香り</string>

    <!-- コーヒー豆、新規作成画面  -->
    <string name="country">原産地</string>
    <string name="farm">農園</string>
    <string name="district">地区</string>
    <string name="species">品種</string>
    <string name="elevation">標高(m)</string>
    <string name="process">精製法</string>
    <string name="store">購入店舗</string>
    <string name="review">評価</string>


    <!-- メッセージ関連  -->
    <string name="prompt">選択してください</string>
    <string name="cancel">キャンセル</string>
    <string name="OK">OK</string>
    <string name="save">保存</string>
    <string name="update">更新</string>
    <string name="delete">削除</string>
    <string name="create_recipe_title">レシピの保存</string>
    <string name="create_recipe_message">レシピを保存しますか</string>
    <string name="update_recipe_title">レシピの更新</string>
    <string name="update_message">更新をしてよろしいですか</string>
    <string name="delete_recipe_title">レシピの削除</string>
    <string name="delete_recipe_message">レシピを削除しますか</string>
    <string name="delete_bean_title">コーヒー豆の削除</string>
    <string name="delete_bean_message">コーヒー豆を削除しますか</string>
    <string name="create_bean_title">コーヒー豆の保存</string>
    <string name="create_bean_message">コーヒー豆を保存しますか</string>
    <string name="update_bean_title">コーヒー豆の更新</string>
    <string name="bean_finish_update_message">コーヒー豆を更新しました</string>
    <string name="recipe_finish_save_message">レシピを保存しました</string>
    <string name="recipe_finish_update_message">レシピを更新しました</string>
    <string name="recipe_finish_delete_message">レシピを削除しました</string>
    <string name="bean_finish_delete_message">コーヒー豆を削除しました</string>
    <string name="bean_finish_create_message">コーヒー豆を保存しました</string>
    <string name="bean_not_registered_title">コーヒー豆 未登録</string>
    <string name="bean_not_registered_message">レシピの登録には、コーヒー豆の登録が必須です。\nコーヒー豆登録画面に遷移します。</string>

    <!-- validation 関連    -->
    <string name="bean_required_message">コーヒー豆が選択されてません</string>
    <string name="max_value_validation">入力の最大値は%1$dです</string>
    <string name="minimum_value_validation">入力の最小値は%1$dです</string>
    <string name="tool_validation_message">抽出器具は必須です</string>
    <string name="country_validation_message">原産地は必須です</string>

    <string name="elevation_width_meters">%1$sm</string>
    <string name="elevation_from_to">%1$sm ~ %2$sm</string>
    <string name="rate_decimal">%1$s.0</string>
    <string name="amountBeans_gram">%1$dg</string>
    <string name="amountExtraction_cc">%1$dcc</string>
    <string name="temperature_degree">%1$d℃</string>
    <string name="preInfusionTime_seconds">%1$d秒</string>
    <string name="extractionTime_unit">%1$d分%2$d秒</string>
    <string name="new_recipe_Header">New</string>
    <string name="favorite_recipe_header">Favorites</string>
    <string name="high_rating_header">High Rating</string>
    <string name="refine">絞り込み</string>
    <string name="sort">並び替え</string>
    <string name="recipeCount">%1d件</string>

    <string name="hint_country"><font size="15">原産地</font></string>
    <string name="search_hint_word">country, tool, roast, and more ...</string>
</resources>