<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_taste_dialog_fragment_background">


    <TextView
        android:id="@+id/title"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_process"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"/>

    <TextView
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:textSize="14sp"
        android:textColor="@color/brown_light"
        android:textStyle="bold"
        android:text="@string/update"
        android:background="@drawable/recipe_tag_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="14sp"
        android:textColor="@color/brown_light"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/updateBtn"
        app:layout_constraintTop_toTopOf="@+id/updateBtn"
        app:layout_constraintEnd_toStartOf="@+id/updateBtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>