<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EditRecipeFragment">

    <include
        layout="@layout/favorite_header"
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackBarPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/snackBar_background"
        app:layout_constraintTop_toBottomOf="@+id/header" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/snackBarPlace"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <TextView
                android:id="@+id/grindTitle"
                style="@style/edit_bean_title"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/grind_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/grindTextView"
                style="@style/mEditTextStyle"
                android:hint="@string/grind_size"
                android:textColor="@color/black"
                android:gravity="center|left"
                app:layout_constraintEnd_toStartOf="@+id/selectGrindBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grindTitle" />

            <ImageView
                android:id="@+id/selectGrindBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_playlist_add_24"
                app:tint="@color/pink_light_dark"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toEndOf="@+id/grindTextView"
                app:layout_constraintTop_toTopOf="@+id/grindTextView"
                app:layout_constraintBottom_toBottomOf="@+id/grindTextView"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/roastTitle"
                style="@style/edit_bean_title"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/roast"
                app:layout_constraintTop_toBottomOf="@+id/grindTextView"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/roastTextView"
                style="@style/mEditTextStyle"
                android:hint="@string/roast"
                android:textColor="@color/black"
                android:gravity="center|left"
                app:layout_constraintEnd_toStartOf="@+id/selectRoastBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roastTitle" />

            <ImageView
                android:id="@+id/selectRoastBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_playlist_add_24"
                app:tint="@color/pink_light_dark"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toEndOf="@+id/roastTextView"
                app:layout_constraintTop_toTopOf="@+id/roastTextView"
                app:layout_constraintBottom_toBottomOf="@+id/roastTextView"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/toolTitle"
                style="@style/edit_bean_title"
                android:text="@string/tool"
                app:layout_constraintTop_toBottomOf="@+id/roastTextView"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/toolEditText"
                style="@style/mEditTextStyle"
                android:hint="@string/tool"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolTitle">
            </EditText>

            <TextView
                android:id="@+id/amountBeanTitle"
                style="@style/edit_bean_title"
                android:text="@string/amount_beans"
                app:layout_constraintTop_toBottomOf="@+id/toolEditText"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/amountBeanEditText"
                style="@style/mEditTextStyle"
                android:hint="@string/amount_beans"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amountBeanTitle"/>

            <TextView
                android:id="@+id/temperatureTitle"
                style="@style/edit_bean_title"
                android:text="@string/temperature"
                app:layout_constraintTop_toBottomOf="@+id/amountBeanEditText"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/temperatureEditText"
                style="@style/mEditTextStyle"
                android:hint="@string/temperature"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperatureTitle"/>

            <TextView
                android:id="@+id/preInfusionTimeTitle"
                style="@style/edit_bean_title"
                android:text="@string/pre_infusion_time"
                app:layout_constraintTop_toBottomOf="@+id/temperatureEditText"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/preInfusionTimeEditText"
                style="@style/mEditTextStyle"
                android:hint="@string/pre_infusion_time"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preInfusionTimeTitle"/>

            <TextView
                android:id="@+id/extractionTimeTitle"
                style="@style/edit_bean_title"
                android:text="@string/extraction_time_title"
                app:layout_constraintTop_toBottomOf="@+id/preInfusionTimeEditText"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/extractionTimeWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@+id/extractionTimeTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    style="@style/mEditTextStyle"
                    android:id="@+id/extractionTimeMinuteEditText"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_margin="0dp"
                    android:hint="@string/extraction_time_minutes"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/unitMinute"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <TextView
                    android:id="@+id/unitMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textSize="16sp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toEndOf="@+id/extractionTimeMinuteEditText"
                    app:layout_constraintEnd_toStartOf="@+id/extractionTimeSecondsEditText"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    style="@style/mEditTextStyle"
                    android:id="@+id/extractionTimeSecondsEditText"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:hint="@string/extraction_time_seconds"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/unitMinute"
                    app:layout_constraintEnd_toStartOf="@+id/secondsUnit"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/secondsUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/extractionTimeSecondsEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/amountExtractionTitle"
                style="@style/edit_bean_title"
                android:text="@string/amount_extraction"
                app:layout_constraintTop_toBottomOf="@+id/extractionTimeWrapper"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/amountExtractionEditText"
                style="@style/mEditTextStyle"
                android:hint="@string/amount_extraction"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amountExtractionTitle"/>

            <TextView
                android:id="@+id/commentTitle"
                style="@style/edit_bean_title"
                android:text="@string/comment"
                app:layout_constraintTop_toBottomOf="@+id/amountExtractionEditText"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/commentEditText"
                style="@style/mEditTextStyle"
                android:layout_height="100dp"
                android:gravity="top"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:inputType="textMultiLine"
                android:maxLines="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commentTitle"/>

            <TextView
                android:id="@+id/beanReviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/review"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/recipe_detail_rating_background"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/commentEditText"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/beanStarFirst"
                style="@style/ratingStarLarge"
                android:layout_marginTop="20dp"
                android:layout_marginStart="0dp"
                android:src="@drawable/ic_baseline_star_grey"
                app:layout_constraintTop_toBottomOf="@+id/beanReviewTitle"
                app:layout_constraintStart_toStartOf="@+id/beanReviewTitle" />

            <ImageView
                android:id="@+id/beanStarSecond"
                style="@style/ratingStarLarge"
                android:src="@drawable/ic_baseline_star_grey"
                app:layout_constraintTop_toTopOf="@+id/beanStarFirst"
                app:layout_constraintStart_toEndOf="@+id/beanStarFirst" />

            <ImageView
                android:id="@+id/beanStarThird"
                style="@style/ratingStarLarge"
                android:src="@drawable/ic_baseline_star_grey"
                app:layout_constraintTop_toTopOf="@+id/beanStarFirst"
                app:layout_constraintStart_toEndOf="@+id/beanStarSecond" />

            <ImageView
                android:id="@+id/beanStarFourth"
                style="@style/ratingStarLarge"
                android:src="@drawable/ic_baseline_star_grey"
                app:layout_constraintTop_toTopOf="@+id/beanStarFirst"
                app:layout_constraintStart_toEndOf="@+id/beanStarThird" />

            <ImageView
                android:id="@+id/beanStarFifth"
                style="@style/ratingStarLarge"
                android:src="@drawable/ic_baseline_star_grey"
                app:layout_constraintTop_toTopOf="@+id/beanStarFirst"
                app:layout_constraintStart_toEndOf="@+id/beanStarFourth" />

            <TextView
                android:id="@+id/beanRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="3.0"
                android:textSize="26sp"
                android:textColor="@color/brown_light"
                app:layout_constraintStart_toEndOf="@+id/beanStarFifth"
                app:layout_constraintBottom_toBottomOf="@+id/beanStarFirst"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_24"
        app:tint="#FBFBFB"
        app:backgroundTint="@color/pink_dark"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>